<resources>
    <string name="app_name">MyDemo</string>
    <string name="hello">Hello,every body ..You are supper!</string>

    <string name="item_01">wo shi 01</string>
    <string name="item_02">wo shi 02</string>
    <string name="item_03">wo shi 03</string>
    <string name="item_04">wo shi 04</string>
    <string name="item_05">wo shi 05</string>
    <string name="item_06">wo shi 06</string>
    <string name="checked">CHECKED!!!</string>


    <!--lable-->
    <string name="lable_okhttp">okhttp</string>

    <!--quiz xml string-->
    <string name="but_quiz_true">true</string>
    <string name="but_quiz_false">false</string>
    <string name="but_quiz_next">next</string>
    <string name="but_quiz_prev">prev</string>

    <!--问题-->
    <string name="question_australia"> Canberra is the capital of Australia.</string>
    <string name="question_oceans"> The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast"> The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa"> The source of the Nile River is in Egypt.</string>
    <string name="question_americas"> The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia"> Lake Baikal is the world\' s oldest and deepest freshwater lake.</string>
    <string name="toast_quiz_right">right</string>
    <string name="toast_quiz_wrong">wrong</string>



</resources>
