<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".quiz.QuizActivity">

    <TextView
        android:id="@+id/tv_quiz_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue"
        android:padding="24dp"
        android:textColor="@color/black"
        tools:text="@string/hello" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_quiz_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_quiz_true" />

        <Button
            android:id="@+id/but_quiz_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_quiz_false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_quiz_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrow_left"
            android:text="@string/but_quiz_prev" />

        <Button
            android:id="@+id/but_quiz_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:drawableRight="@drawable/bg_gray"
            android:text="@string/but_quiz_next" />
    </LinearLayout>
</LinearLayout>